tests/NormalTests/paczka1/fuzzy1/22557155.err
Error in line 9: Kqu S268 81,4
Error in line 10: Kqu S569 88,2
Error in line 3: BgRSOf A424 53,1
Error in line 25: Lc4bB9O3xn S569 14,6
Error in line 26: Lc4bB9O3xn A424 15,7
Error in line 32: Tsb S268 57,5
